# spp

./: DESCRIPTION  NAMESPACE  README.md  configure  configure.ac
R/: zroutines.R
man/: add.broad.peak.regions.Rd  densum.Rd  find.binding.positions.Rd  get.binding.characteristics.Rd  get.broad.enrichment.clusters.Rd  get.conservative.fold.enrichment.profile.Rd  get.conservative.fold.enrichment.profile2.Rd  get.mser.Rd  get.mser.interpolation.Rd  get.smoothed.enrichment.mle.Rd  get.smoothed.enrichment.mle2.Rd  get.smoothed.tag.density.Rd  output.binding.results.Rd  points.within.Rd  points_within.Rd  points_withinFunction.Rd  read.arachne.tags.Rd  read.bowtie.tags.Rd  read.eland.tags.Rd  read.helicos.tags.Rd  read.short.arachne.tags.Rd  read.tagalign.tags.Rd  remove.local.tag.anomalies.Rd  select.informative.tags.Rd  spp-package.Rd  write.broadpeak.info.Rd  write.narrowpeak.binding.Rd  writewig.Rd
src/: Makevars  Makevars.in  bed2vector.C  bed2vector.cpp  cdensum.c  maqmap.c  maqread.C  maqread.cpp  pc.h  peaks.C  peaks.cpp  spp_init.c  wdl.C  wdl.cpp
